[package]
name = "apicommand"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["cargo"] }
color-eyre = { version = "0.6", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
sea-query = { version = "0.30", features = ["derive", "with-chrono"] }
sea-query-binder = { version = "0.5", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-chrono",
] }

sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
strum = { version = "0.26", features = ["derive"] }

thiserror = "1.0"

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
typed-builder = "0.18"


# [profile.release]
# opt-level = 's'
# lto = true        # Enable link-time optimization
# codegen-units = 1 # Reduce number of codegen units to increase optimizations
# panic = 'abort'   # Abort on panic
# strip = true      # Strip symbols from binary*
